--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 </head>
+<link rel="shortcut icon" href="img/my-logo/rotate-briefcase.png">
 <body>
     <div class="container-fluid background">
         <div class="social-icons">
@@ -55,6 +56,15 @@
                     </p>
                     <div class="description__bg-decoration-left"></div>
                     <div class="description__bg-decoration-right"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-xs-12">
+                        <div class="button__show-hide">
+                            <img class="eye-img-show" src="img/my-logo/eye-show.png">
+                            <img class="eye-img-hide" src="img/my-logo/eye-hide.png">
+                            <p>POKAŻ<br>WSZYSTKO</p>
+                        </div>
                 </div>
             </div>
             <div class="row">
