--- a/main.html
+++ b/main.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Dietitian First Aid Kit by Paweł_R</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="scss/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="scss/main/main.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
@@ -28,7 +27,7 @@
                 <div class="title__wrapper">
                     <div class="site__title">
                         <img align="left" class="rotate-briefcase" src="img/my-logo/rotate-briefcase.png" />
-                        Dietitian
+                        <p class="site__title-dietitian">Dietitian</p>
                         <p class="site__title-first">
                             first
                         </p>
