--- a/ppm-harris-benedict/harris-benedict.html
+++ b/ppm-harris-benedict/harris-benedict.html
@@ -3,42 +3,84 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Harris–Benedict Equation</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="harris-benedict.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../scss/calc-style/calc-style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <style>
+        body {
+            background: url(../img/backgrounds/harris-benedict-bg.jpg) no-repeat top center;
+            background-size: cover;
+        }
+    </style>
 </head>
+<link rel="shortcut icon" href="../img/my-logo/rotate-briefcase.png">
 <body>
-    <h1>KALKULATOR:<br>PODSTAWOWA PRZEMIANA MATERII (PPM)<br>WZÓR HARRISA-BENEDICTA</h1>
-    <form name="calc" id="calc">
-        <div class="wrapper">
-            <div class="gender">
-                <p>Płeć:</p>
-                <select>
-                    <option>Kobieta</option>
-                    <option>Mężczyzna</option>
-                </select>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-xs-12">
+                    <h1 class="subpage-title">PODSTAWOWA PRZEMIANA MATERII (PPM)<br>WZÓR HARRISA-BENEDICTA</h1>
+                </div>
             </div>
-            <div class="input">
-                <p>Wzrost:</p>
-                <input class="growth" type="text" value="190">
-                <p>cm</p>
-            </div>
-            <div class="input">
-                <p>Masa ciała:</p>
-                <input class="weight" type="text" value="80">
-                <p>kg</p>
-            </div>
-            <div class="input">
-                <p>Wiek:</p>
-                <input class="age" type="text" value="25">
-            </div>
-            <button>Oblicz</button>
-            <div class="score">
-                <p>Wynik:</p>
-                <p style="font-weight:bold;display:inline-block;"></p>
-            </div>
+            <div class="row">
+                    <div class="col-lg-12 col-xs-12 description">
+                        <p class="description__text">
+                            Kalkulatory dietetyczne dostępne poniżej wykorzystują zaawansowane algorytmy opracowane na podstawie wzorów i tabel używanych przez najlepszych specjalistów z dziedziny dietetyki. Z ich pomocą m.in. z łatwością dokonasz aktualnej analizy masy ciała czy poziomu tkanki tłuszczowej. Dzięki nim poznasz również swoje dzienne zapotrzebowanie kaloryczne.
+                        </p>
+                        <div class="description__bg-decoration-left"></div>
+                        <div class="description__bg-decoration-right"></div>
+                    </div>
+                </div>
+            <form name="calc" id="calc">
+                <div class="wrapper">
+                    <div class="row">
+                        <div class="col-lg-12 col-xs-12 select-field">
+                            <p>Płeć:</p>
+                            <select>
+                                <option>Kobieta</option>
+                                <option>Mężczyzna</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-xs-12 input-field">
+                            <p>Wzrost:</p>
+                            <input type="text" value="190" class="growth">
+                            <p>cm</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-xs-12 input-field">
+                            <p>Masa ciała:</p>
+                            <input type="text" value="80" class="weight">
+                            <p>kg</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-xs-12 input-field">
+                            <p>Wiek:</p>
+                            <input type="text" value="25" class="age">
+                            <p>kg</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-xs-12">
+                            <div class="score">
+                                <p>Wynik:</p>
+                                <p style="font-weight:bold;display:inline-block;"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-xs-12">
+                            <button>Oblicz</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
     <script src="harris-benedict.js"></script>
 </body>
 </html>
