--- a/ppm-harris-benedict/harris-benedict.html
+++ b/ppm-harris-benedict/harris-benedict.html
@@ -17,9 +17,19 @@
 <link rel="shortcut icon" href="../img/my-logo/rotate-briefcase.png">
 <body>
     <div class="container-fluid">
+        <div class="social-icons">
+            <a href="https://www.facebook.com/pawelr93" target="_blank" class="fa fa-facebook"></a>
+            <a href="https://github.com/sirPaul1" target="_blank" class="fa fa-github"></a>
+            <a class="fa fa-linkedin"></a>
+        </div>
+        <a href="../main.html" class="return-btn">
+            <img class="arrow" src="../img/my-logo/return-arrow-white.png">
+            <p class="return">POWRÓT</p>
+        </a>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-xs-12">
+                    <!-- <img align="left" class="rotate-briefcase" src="../img/my-logo/rotate-briefcase.png" /> -->
                     <h1 class="subpage-title">PODSTAWOWA PRZEMIANA MATERII (PPM)<br>WZÓR HARRISA-BENEDICTA</h1>
                 </div>
             </div>
@@ -34,47 +44,49 @@
                 </div>
             <form name="calc" id="calc">
                 <div class="wrapper">
-                    <div class="row">
-                        <div class="col-lg-12 col-xs-12 select-field">
-                            <p>Płeć:</p>
-                            <select>
-                                <option>Kobieta</option>
-                                <option>Mężczyzna</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 col-xs-12 input-field">
-                            <p>Wzrost:</p>
-                            <input type="text" value="190" class="growth">
-                            <p>cm</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 col-xs-12 input-field">
-                            <p>Masa ciała:</p>
-                            <input type="text" value="80" class="weight">
-                            <p>kg</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 col-xs-12 input-field">
-                            <p>Wiek:</p>
-                            <input type="text" value="25" class="age">
-                            <p>kg</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 col-xs-12">
-                            <div class="score">
-                                <p>Wynik:</p>
-                                <p style="font-weight:bold;display:inline-block;"></p>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 col-xs-12 select-field">
+                                <p>Płeć:</p>
+                                <select>
+                                    <option>Mężczyzna</option>
+                                    <option>Kobieta</option>
+                                </select>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 col-xs-12">
-                            <button>Oblicz</button>
+                        <div class="row">
+                            <div class="col-lg-12 col-xs-12 input-field">
+                                <p>Wzrost:</p>
+                                <input type="text" value="190" class="growth">
+                                <p>cm</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-xs-12 input-field">
+                                <p>Masa ciała:</p>
+                                <input type="text" value="80" class="weight">
+                                <p>kg</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-xs-12 input-field">
+                                <p>Wiek:</p>
+                                <input type="text" value="25" class="age">
+                                <p>kg</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-xs-12">
+                                <div class="score">
+                                    <p>Wynik:</p>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-xs-12 margin">
+                                <button class="btn-radius">Oblicz</button>
+                            </div>
                         </div>
                     </div>
                 </div>
