Working on subpage
Added score fade-in + validation

--- a/ppm-harris-benedict/harris-benedict.html
+++ b/ppm-harris-benedict/harris-benedict.html
@@ -22,9 +22,11 @@
             <a href="https://github.com/sirPaul1" target="_blank" class="fa fa-github"></a>
             <a class="fa fa-linkedin"></a>
         </div>
-        <a href="../main.html" class="return-btn">
-            <img class="arrow" src="../img/my-logo/return-arrow-white.png">
-            <p class="return">POWRÓT</p>
+        <a href="../main.html">
+            <div class="return-btn">
+                <div class="arrow"></div>
+                <p class="return">POWRÓT</p>
+            </div>
         </a>
         <div class="container">
             <div class="row">
@@ -57,22 +59,29 @@
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Wzrost:</p>
-                                <input type="text" value="190" class="growth">
+                                <input type="text" class="growth">
                                 <p>cm</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Masa ciała:</p>
-                                <input type="text" value="80" class="weight">
+                                <input type="text" class="weight">
                                 <p>kg</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Wiek:</p>
-                                <input type="text" value="25" class="age">
-                                <p>kg</p>
+                                <input type="text" class="age">
+                                <p>lat</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-xs-12">
+                                <div class="validation-text">
+                                    <p>Wypełnij poprawnie puste pola!</p>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
@@ -85,7 +94,9 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 margin">
-                                <button class="btn-radius">Oblicz</button>
+                                <button class="btn">
+                                    Oblicz
+                                </button>
                             </div>
                         </div>
                     </div>
