added all subpages appearance with description

--- a/main.html
+++ b/main.html
@@ -67,19 +67,19 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="bmi/bmi.html">
                         <div class="button button__bmi">
                             <p class="button__title">BMI</p>
                             <div class="button__background-fadein">
                                 <p class="button__text-fadein">
-                                    Kalkulator BMI (Body Mass Index) daje Ci możliwość szybkiego i wygodego obliczenia własnego wskaźnika masy ciała.
+                                    Kalkulator BMI (Body Mass Index) daje Ci możliwość szybkiego i wygodnego obliczenia własnego wskaźnika masy ciała.
                                 </p>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="cpm/cpm.html">
                         <div class="button button__cpm">
                             <p class="button__title">CPM</p>
                             <div class="button__background-fadein">
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="ppm-mifflin/mifflin.html">
                         <div class="button button__mifflin">
                             <p class="button__title">PPM - wzór Mifflina</p>
                             <div class="button__background-fadein">
@@ -119,7 +119,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="glycemic-load/glycemic-load.html">
                         <div class="button button__glycemic">
                             <p class="button__title">Ładunek Glikemiczny</p>
                             <div class="button__background-fadein">
@@ -131,7 +131,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="ymca/ymca.html">
                         <div class="button button__ymca">
                             <p class="button__title">YMCA</p>
                             <div class="button__background-fadein">
@@ -145,7 +145,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="broca/broca.html">
                         <div class="button button__broc">
                             <p class="button__title">Wzór Broca</p>
                             <div class="button__background-fadein">
@@ -157,7 +157,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="lorentz/lorentz.html">
                         <div class="button button__lorentz">
                             <p class="button__title">Wzór Lorentza</p>
                             <div class="button__background-fadein">
@@ -171,7 +171,7 @@
             </div>
             <div class="row buttons-last-row-margin">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="whr/whr.html">
                         <div class="button button__whr">
                             <p class="button__title">WHR</p>
                             <div class="button__background-fadein">
@@ -183,7 +183,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="#">
+                    <a href="pral/pral.html">
                         <div class="button button__pral">
                             <p class="button__title">PRAL</p>
                             <div class="button__background-fadein">
