--- a/ppm-harris-benedict/harris-benedict.html
+++ b/ppm-harris-benedict/harris-benedict.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
         body {
-            background: url(../img/backgrounds/harris-benedict-bg.jpg) no-repeat top center;
+            background:
+            linear-gradient(to top, rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0.7)),
+            url(../img/backgrounds/harris-benedict-bg.jpg)
+            no-repeat top center;
+
             background-size: cover;
         }
     </style>
@@ -38,7 +42,7 @@
             <div class="row">
                     <div class="col-lg-12 col-xs-12 description">
                         <p class="description__text">
-                            Kalkulatory dietetyczne dostępne poniżej wykorzystują zaawansowane algorytmy opracowane na podstawie wzorów i tabel używanych przez najlepszych specjalistów z dziedziny dietetyki. Z ich pomocą m.in. z łatwością dokonasz aktualnej analizy masy ciała czy poziomu tkanki tłuszczowej. Dzięki nim poznasz również swoje dzienne zapotrzebowanie kaloryczne.
+                            Wzór Harrisa-Benedicta służy do obliczenia podstawowej przemiany materii. PPM to inaczej spoczynkowy wydatek energetyczny. Wielkość PPM zależy od wielu czynników, rzede wszystkim od powierzchni ciała mierzonej w m2. Podstawowa przemiana materii to nic innego jak najniższy poziom przemian energetycznych zachodzących w organizmie człowieka, gdy pozostaje on w stanie całkowitego spokoju fizycznego, na czczo w optymalnej temperaturze.
                         </p>
                         <div class="description__bg-decoration-left"></div>
                         <div class="description__bg-decoration-right"></div>
@@ -59,21 +63,21 @@
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Wzrost:</p>
-                                <input type="text" class="growth">
+                                <input type="number" class="growth">
                                 <p>cm</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Masa ciała:</p>
-                                <input type="text" class="weight">
+                                <input type="number" class="weight">
                                 <p>kg</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Wiek:</p>
-                                <input type="text" class="age">
+                                <input type="number" class="age">
                                 <p>lat</p>
                             </div>
                         </div>
