Links to my GitHub
Account name change

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <div class="container-fluid background">
         <div class="social-icons">
             <a href="https://www.facebook.com/pawelr93" target="_blank" class="fa fa-facebook"></a>
-            <a href="https://github.com/sirPaul1" target="_blank" class="fa fa-github"></a>
+            <a href="https://github.com/PawelRod" target="_blank" class="fa fa-github"></a>
             <a class="fa fa-linkedin"></a>
         </div>
         <a class="scroll-top-btn">
