--- a/ppm-mifflin/mifflin.html
+++ b/ppm-mifflin/mifflin.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <div class="social-icons">
             <a href="https://www.facebook.com/pawelr93" target="_blank" class="fa fa-facebook"></a>
-            <a href="https://github.com/sirPaul1" target="_blank" class="fa fa-github"></a>
+            <a href="https://github.com/PawelRod" target="_blank" class="fa fa-github"></a>
             <a class="fa fa-linkedin"></a>
         </div>
         <a href="../main.html">
