--- a/ymca/ymca.html
+++ b/ymca/ymca.html
@@ -11,6 +11,8 @@
         body {
             background:
             linear-gradient(to top, rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0.7)),
+            linear-gradient(to left, rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0.5)),
+            linear-gradient(to right, rgba(0,0,0,0),rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,0.5)),
             url(../img/backgrounds/ymca-bg.jpg)
             no-repeat top center;
 
