--- a/bmi/bmi.html
+++ b/bmi/bmi.html
@@ -55,16 +55,16 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
-                                <p>Masa ciała:</p>
-                                <input type="number" class="weight">
-                                <p>kg</p>
+                                <p>Wzrost:</p>
+                                <input type="text" class="input__comma-change growth">
+                                <p>cm</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
-                                <p>Wzrost:</p>
-                                <input type="number" class="growth">
-                                <p>cm</p>
+                                <p>Masa ciała:</p>
+                                <input type="text" class="input__comma-change weight">
+                                <p>kg</p>
                             </div>
                         </div>
                         <div class="row">
@@ -76,8 +76,9 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12">
-                                <div class="score">
+                                <div class="score score__longer">
                                     <p>Wynik:</p>
+                                    <p></p>
                                     <p></p>
                                 </div>
                             </div>
