--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 </head>
 <link rel="shortcut icon" href="img/my-logo/rotate-briefcase.png">
-<body>
-    <div class="container-fluid background">
+<body class="background">
+    <div class="container-fluid">
         <div class="social-icons">
             <a href="https://www.facebook.com/pawelr93" target="_blank" class="fa fa-facebook"></a>
             <a href="https://github.com/PawelRod" target="_blank" class="fa fa-github"></a>
