--- a/html_subpages/harris-benedict.html
+++ b/html_subpages/harris-benedict.html
@@ -65,21 +65,21 @@
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Wzrost:</p>
-                                <input type="number" class="growth">
+                                <input type="text" class="input__comma-change growth">
                                 <p>cm</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Masa ciała:</p>
-                                <input type="number" class="weight">
+                                <input type="text" class="input__comma-change weight">
                                 <p>kg</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12 col-xs-12 input-field">
                                 <p>Wiek:</p>
-                                <input type="number" class="age">
+                                <input type="text" class="input__comma-change age">
                                 <p>lat</p>
                             </div>
                         </div>
@@ -110,6 +110,7 @@
             </form>
         </div>
     </div>
-    <script src="harris-benedict.js"></script>
+    <script type="text/javascript" src="../js_subpages/_subpages_common-validation.js"></script>
+    <script type="text/javascript" src="../js_subpages/harris-benedict.js"></script>
 </body>
 </html>
