--- a/main.html
+++ b/main.html
@@ -18,8 +18,8 @@
             <a class="fa fa-linkedin"></a>
         </div>
         <a class="scroll-top-btn">
-            <img class="arrow-top" src="img/my-logo/Arrow-Up.png"></img>
-            <img class="arrow-bottom" src="img/my-logo/Arrow-Up.png"></img>
+            <img class="arrow-top" src="img/my-logo/Arrow-Up.png">
+            <img class="arrow-bottom" src="img/my-logo/Arrow-Up.png">
         </a>
         <div class="container">
             <div class="row logo-height">
@@ -67,7 +67,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="bmi/bmi.html">
+                    <a href="html_subpages/bmi.html">
                         <div class="button button__bmi">
                             <p class="button__title">BMI</p>
                             <div class="button__background-fadein">
@@ -79,7 +79,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="cpm/cpm.html">
+                    <a href="html_subpages/cpm.html">
                         <div class="button button__cpm">
                             <p class="button__title">CPM</p>
                             <div class="button__background-fadein">
@@ -93,7 +93,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="ppm-harris-benedict/harris-benedict.html">
+                    <a href="html_subpages/harris-benedict.html">
                         <div class="button button__harris-benedict">
                             <p class="button__title">PPM - wzór Harrisa-Benedicta</p>
                             <div class="button__background-fadein">
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="ppm-mifflin/mifflin.html">
+                    <a href="html_subpages/mifflin.html">
                         <div class="button button__mifflin">
                             <p class="button__title">PPM - wzór Mifflina</p>
                             <div class="button__background-fadein">
@@ -119,7 +119,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="glycemic-load/glycemic-load.html">
+                    <a href="html_subpages/glycemic-load.html">
                         <div class="button button__glycemic">
                             <p class="button__title">Ładunek Glikemiczny</p>
                             <div class="button__background-fadein">
@@ -131,7 +131,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="ymca/ymca.html">
+                    <a href="html_subpages/ymca.html">
                         <div class="button button__ymca">
                             <p class="button__title">YMCA</p>
                             <div class="button__background-fadein">
@@ -145,7 +145,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="broca/broca.html">
+                    <a href="html_subpages/broca.html">
                         <div class="button button__broc">
                             <p class="button__title">Wzór Broca</p>
                             <div class="button__background-fadein">
@@ -157,7 +157,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="lorentz/lorentz.html">
+                    <a href="html_subpages/lorentz.html">
                         <div class="button button__lorentz">
                             <p class="button__title">Wzór Lorentza</p>
                             <div class="button__background-fadein">
@@ -171,7 +171,7 @@
             </div>
             <div class="row buttons-last-row-margin">
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="whr/whr.html">
+                    <a href="html_subpages/whr.html">
                         <div class="button button__whr">
                             <p class="button__title">WHR</p>
                             <div class="button__background-fadein">
@@ -183,7 +183,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-xs-12 buttons-margin">
-                    <a href="pral/pral.html">
+                    <a href="html_subpages/pral.html">
                         <div class="button button__pral">
                             <p class="button__title">PRAL</p>
                             <div class="button__background-fadein">
@@ -200,6 +200,6 @@
             2018. Written and designed by Paweł_R
         </footer>
     </div>
-    <script src="main.js"></script>
 </body>
+<script src="main.js"></script>
 </html>
